<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>felix_lundgren</name>
  <version>0.0.1</version>
  <description>A configuration package for KUKA KR 16 in MANULAB, MTP, NTNU</description>
  <maintainer email="adam.l.kleppe@ntnu.no">adamleon</maintainer>
  <license>TODO: License declaration</license>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

<exec_depend>joint_state_publisher</exec_depend>
<exec_depend>joint_state_publisher_gui</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>rviz</exec_depend>
<exec_depend>xacro</exec_depend>
<exec_depend>moveit_ros_move_group</exec_depend>
<exec_depend>moveit_fake_controller_manager</exec_depend>
<exec_depend>moveit_kinematics</exec_depend>
<exec_depend>moveit_planners_ompl</exec_depend>
<exec_depend>moveit_ros_visualization</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
